<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>um.ico</groupId>
	<artifactId>ingenierie</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>AST_Ingenierie</name>
	<description>Projet de construction d&apos;un analyseur de projet Java</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>3.43.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.core.runtime</artifactId>
            <version>3.33.100</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.core.resources</artifactId>
            <version>3.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>7.4.0.202509020913-r</version>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>${frontend-maven-plugin.version}</version>

                <configuration>
                    <!-- CORRECTION 1: On met le nom du dossier en dur -->
                    <workingDirectory>src/webApp</workingDirectory>

                    <!-- Recommandation : Utiliser une version LTS (Long Term Support) de Node est plus stable -->
                    <nodeVersion>v20.11.1</nodeVersion>
                    <npmVersion>10.2.4</npmVersion>

                    <!-- On enlève installDirectory pour que Node soit installé DANS webApp, c'est plus propre -->
                </configuration>

                <executions>
                    <!-- Exécution 1: Installe Node et NPM -->
                    <execution>
                        <id>install-node-and-npm</id>
                        <goals>
                            <!-- CORRECTION 2: On installe NPM, pas YARN -->
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <!-- On utilise la même phase pour toutes les étapes de préparation -->
                        <phase>generate-resources</phase>
                    </execution>

                    <!-- Exécution 2: Lance "npm install" -->
                    <execution>
                        <id>npm-install</id>
                        <goals>
                            <!-- CORRECTION 3: On utilise le goal "npm", pas "yarn" -->
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>install</arguments>
                        </configuration>
                        <phase>generate-resources</phase>
                    </execution>

                    <!-- Exécution 3: Lance "npm run build" -->
                    <execution>
                        <id>npm-build</id>
                        <goals>
                            <!-- CORRECTION 4: On utilise le goal "npm", pas "yarn" -->
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>run build</arguments>
                        </configuration>
                        <!-- On exécute le build dans la même phase que le reste -->
                        <phase>generate-resources</phase>
                    </execution>
                </executions>
            </plugin>


        </plugins>



	</build>

</project>
